# swift

./: CMakeLists.txt  build-linux.sh  build-mac.sh
cmake/modules/: AddSwift.cmake  SwiftConfigureSDK.cmake  SwiftSource.cmake  Toolchain-linux-arm.cmake
include/swift/AST/: Attr.def  DiagnosticsSema.def
lib/ClangImporter/: ImportMacro.cpp  ImporterImpl.h
lib/IRGen/: EnumPayload.cpp  GenHeap.cpp  IRGenSIL.cpp
lib/SIL/: TypeLowering.cpp
lib/SILGen/: SILGenLValue.cpp
lib/Sema/: TypeCheckAttr.cpp  TypeCheckDecl.cpp  TypeCheckDeclOverride.cpp  TypeCheckProtocol.cpp
stdlib/: CMakeLists.txt
stdlib/private/SwiftReflectionTest/: CMakeLists.txt
stdlib/public/Platform/: CMakeLists.txt  POSIXError.swift
stdlib/public/Reflection/: TypeLowering.cpp
test/: CMakeLists.txt
test/ClangImporter/: macros.swift
test/Inputs/clang-importer-sdk/usr/include/: macros.h
test/ParseableInterface/: modifiers.swift
test/attr/: attr_sealed.swift
test/attr/Inputs/: attr_sealed_helpers.swift
tools/SourceKit/: CMakeLists.txt
utils/: build-presets.ini  build-script  build-script-impl
utils/swift_build_support/swift_build_support/: targets.py
